# Java-labs

Projects/Dmaths/diskretka/: CMakeLists.txt
Projects/Dmaths/diskretka2/: CMakeLists.txt
Projects/Dmaths/maths/: CMakeLists.txt
Projects/evm/evm1/: CMakeLists.txt  evm1_en_GB.ts
Projects/evm/individual/Image-Converter-master/Image_converter/: mainwindow.h
courseWork/: pom.xml  test.trace.db
courseWork/src/main/java/client/: App.java
courseWork/src/main/java/client/controller/: AuthController.java  BookController.java  BookTypeController.java  ClientController.java  JournalController.java
courseWork/src/main/java/client/model/: BookModel.java  BookTypeModel.java  ClientModel.java  JournalModel.java
courseWork/src/main/java/main/: LibraryAutomationApplication.java  TestDataInit.java
courseWork/src/main/java/main/controller/: BookTypesController.java  BooksController.java  ClientsController.java  JournalController.java
courseWork/src/main/java/main/entity/: BookTypes.java  Books.java  Clients.java  Journal.java  User.java
courseWork/src/main/java/main/repository/: BookTypesRepository.java  BooksRepository.java  (+2 more)
courseWork/src/main/resources/: application.properties
lab3/src/: Main.java  Producer.java  Robot.java  Student.java
lab4/: products.db
lab4/src/: DbHandler.java  Main.java  Product.java
lab5/: products.db
lab5/src/DataBase/: DbHandler.java  Product.java
lab5/src/UserInterface/: Controller.java  Main.java  NewProductController.java  UpdatePriceController.java
lab5/src/UserInterface/fxml/: App2.css  NewProduct.fxml  UpdatePrice.fxml
(+1 files in other folders)
